# api/docs/swagger.json
@@ -473,7 +473,7 @@
                 }
             }
         },
-        "/comment/get_user/{user_id}": {
+        "/comment/get_user": {
             "get": {
                 "security": [
                     {
@@ -565,7 +565,7 @@
             }
         },
         "/comment/remove_like/{comment_id}": {
-            "post": {
+            "delete": {
                 "security": [
                     {
                         "BearerAuth": []
